--- a/servicios/academia/index.html
+++ b/servicios/academia/index.html
@@ -64,41 +64,47 @@
                 <img id="logoImg" src="../../img/logo_s.webp" alt="Logo" style="height:75px; transition:all .3s;">
                 <span class="ms-2 alumni-font fw-bold fs-4" id="logoText"></span>
             </a>
+
             <!-- Botón hamburguesa -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <!-- Menú y redes sociales -->
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-                <ul class="navbar-nav mx-auto mb-2 mb-md-0 d-flex align-items-center justify-content-center gap-2">
-                    <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center m-3" href="../../">Inicio</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center m-3" href="./about.html">Nosotros</a>
-                    </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center active m-3"
-                            href="../../#service">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center m-3" href="../../contacto/">Contacto</a>
-                    </li>
-                </ul>
-                <div class="d-flex align-items-center ms-md-3">
-                    <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
-                        href="https://www.tiktok.com/@triviumrecords" target="_blank" rel="noopener">
-                        <i class="fab fa-tiktok"></i>
-                    </a>
-                    <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
-                        href="https://www.facebook.com/profile.php?id=61576953278858" target="_blank" rel="noopener">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
-                        href="https://www.instagram.com/triviumrecords.mx" target="_blank" rel="noopener">
-                        <i class="fab fa-instagram"></i>
-                    </a>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <!-- Contenedor flex para centrar -->
+                <div class="d-flex justify-content-between align-items-center w-100">
+                    <!-- Menú central -->
+                    <ul class="navbar-nav mx-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-medium text-center m-3" href="../../">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-medium text-center active m-3"
+                                href="../.././#servicios">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-medium text-center m-3" href="../../contacto/">Contacto</a>
+                        </li>
+                    </ul>
+
+                    <!-- Redes sociales a la derecha -->
+                    <div class="d-flex align-items-center">
+                        <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
+                            href="https://www.tiktok.com/@triviumrecords" target="_blank" rel="noopener">
+                            <i class="fab fa-tiktok"></i>
+                        </a>
+                        <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
+                            href="https://www.facebook.com/profile.php?id=61576953278858" target="_blank"
+                            rel="noopener">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
+                            href="https://www.instagram.com/triviumrecords.mx" target="_blank" rel="noopener">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -172,93 +178,7 @@
     <div class="container-xxl mb-5">
 
         <!-- Nivel Básico -->
-        <div class="row align-items-center mb-5">
-            <div class="col-lg-6 px-0 d-flex justify-content-center order-1">
-                <img width="60%" class="img-fluid" src="../../img/acade_canto_basi.webp" alt="Nivel Básico">
-            </div>
-            <div class="col-lg-6 py-5 py-lg-0 px-3 px-lg-5 order-2">
-                <h3 class="text-white mb-3" data-aos="fade-up">Básico</h3>
-                <p class="text-white" style="text-align: justify;" data-aos="fade-up">
-                    Ideal para principiante en el canto académico y popular.
-                </p>
-                <ul class="text-white">
-                    <li>Solfeo y teoría</li>
-                    <li>Afinación vocal</li>
-                    <li>Técnicas de respiración</li>
-                    <li>Asignación de tesituras</li>
-                    <li>Técnica vocal</li>
-                    <li>Asignación de repertorio</li>
-                </ul>
-                <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Party%20Pack%201"
-                    class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
-                    rel="noopener">
-                    <i class="fab fa-whatsapp fa-lg m-2"></i>
-                    WhatsApp
-                </a>
-            </div>
-        </div>
-
-        <!-- Nivel Intermedio -->
-        <div class="row align-items-center mb-5">
-            <div class="col-lg-6 px-0 d-flex justify-content-center order-1 order-lg-1">
-                <img width="60%" class="img-fluid" src="../../img/acade_canto_inter.webp" alt="Nivel Intermedio">
-            </div>
-            <div class="col-lg-6 py-5 py-lg-0 px-3 px-lg-5 order-2 order-lg-2">
-                <h3 class="text-white mb-3" data-aos="fade-up">Intermedio</h3>
-                <p class="text-white" style="text-align: justify;" data-aos="fade-up">
-                    Ideal para alumnos con algo de experiencia en el canto y la música.
-                </p>
-                <ul class="text-white">
-                    <li>Lectura a primera vista</li>
-                    <li>Extensión de rango</li>
-                    <li>Entrenamiento auditivo</li>
-                    <li>Solfeo y teoría 2</li>
-                    <li>Técnica vocal 2</li>
-                    <li>Asignación de repertorio</li>
-                </ul>
-                <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Party%20Pack%201"
-                    class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
-                    rel="noopener">
-                    <i class="fab fa-whatsapp fa-lg m-2"></i>
-                    WhatsApp
-                </a>
-            </div>
-        </div>
-
-        <!-- Nivel Avanzado -->
-        <div class="row align-items-center mb-5">
-            <div class="col-lg-6 px-0 d-flex justify-content-center order-1">
-                <img width="60%" class="img-fluid" src="../../img/acade_canto_avan.webp" alt="Nivel Avanzado">
-            </div>
-            <div class="col-lg-6 py-5 py-lg-0 px-3 px-lg-5 order-2">
-                <h3 class="text-white mb-3" data-aos="fade-up">Avanzado</h3>
-                <p class="text-white" style="text-align: justify;" data-aos="fade-up">
-                    Ideal para alumnos con estudios en canto, buscando ampliar su conocimiento.
-                </p>
-                <ul class="text-white">
-                    <li>Técnicas extendidas</li>
-                    <li>Conjuntos vocales</li>
-                    <li>Presencia escénica</li>
-                    <li>Piano para cantantes</li>
-                    <li>Análisis musical</li>
-                    <li>Asignación de repertorio</li>
-                </ul>
-                <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Party%20Pack%201"
-                    class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
-                    rel="noopener">
-                    <i class="fab fa-whatsapp fa-lg m-2"></i>
-                    WhatsApp
-                </a>
-            </div>
-        </div>
-
-    </div>
-
-    <!-- Opcion 2 -->
-    <div class="container-xxl mb-5">
-
-        <!-- Nivel Básico -->
-        <div class="row align-items-center mb-5 py-5 px-3" style="background-color: #222;">
+        <div class="row align-items-center mb-5 py-5 px-3">
             <div class="col-lg-6 px-0 d-flex justify-content-center order-1" data-aos="fade-up" data-aos-delay="100"
                 data-aos-duration="1000">
                 <img width="60%" class="img-fluid" src="../../img/acade_canto_basi.webp" alt="Nivel Básico">
@@ -277,13 +197,17 @@
                     <li>Técnica vocal</li>
                     <li>Asignación de repertorio</li>
                 </ul>
-                <a href="/servicios/eventos/index.html"
-                    class="btn-enviar text-light mt-4 px-4 d-flex justify-content-center">Ver Más</a>
+                <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20programa%20de%20canto%20básico"
+                    class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                    rel="noopener">
+                    <i class="fab fa-whatsapp fa-lg m-2"></i>
+                    WhatsApp
+                </a>
             </div>
         </div>
 
         <!-- Nivel Intermedio -->
-        <div class="row align-items-center mb-5 py-5 px-3" style="background-color: #333;">
+        <div class="row align-items-center mb-5 py-5 px-3">
             <div class="col-lg-6 py-5 py-lg-0 px-4 px-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100"
                 data-aos-duration="1000">
                 <h3 class="text-white mb-3">Intermedio</h3>
@@ -298,8 +222,12 @@
                     <li>Técnica vocal 2</li>
                     <li>Asignación de repertorio</li>
                 </ul>
-                <a href="/servicios/artistas/index.html"
-                    class="btn-enviar text-light mt-4 px-4 d-flex justify-content-center">Ver Más</a>
+                <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20programa%20de%20canto%20intermedio"
+                    class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                    rel="noopener">
+                    <i class="fab fa-whatsapp fa-lg m-2"></i>
+                    WhatsApp
+                </a>
             </div>
             <div class="col-lg-6 px-0 d-flex justify-content-center order-1 order-lg-2" data-aos="fade-up"
                 data-aos-delay="200" data-aos-duration="1000">
@@ -308,7 +236,7 @@
         </div>
 
         <!-- Nivel Avanzado -->
-        <div class="row align-items-center mb-5 py-5 px-3" style="background-color: #222;">
+        <div class="row align-items-center mb-5 py-5 px-3">
             <div class="col-lg-6 px-0 d-flex justify-content-center order-1" data-aos="fade-up" data-aos-delay="100"
                 data-aos-duration="1000">
                 <img width="60%" class="img-fluid" src="../../img/acade_canto_avan.webp" alt="Nivel Avanzado">
@@ -327,8 +255,12 @@
                     <li>Análisis musical</li>
                     <li>Asignación de repertorio</li>
                 </ul>
-                <a href="/servicios/eventos/index.html"
-                    class="btn-enviar text-light mt-4 px-4 d-flex justify-content-center">Ver Más</a>
+                <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20programa%20de%20canto%20avanzado"
+                    class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                    rel="noopener">
+                    <i class="fab fa-whatsapp fa-lg m-2"></i>
+                    WhatsApp
+                </a>
             </div>
         </div>
 
