--- a/servicios/producciones/index.html
+++ b/servicios/producciones/index.html
@@ -73,14 +73,14 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
                 <ul class="navbar-nav mx-auto mb-2 mb-md-0 d-flex align-items-center justify-content-center gap-2">
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center m-3" href="../">Inicio</a>
+                        <a class="nav-link text-white fw-medium text-center m-3" href="../../">Inicio</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="./about.html">Nosotros</a>
                     </li> -->
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center active m-3"
-                            href="../../#servicios/">Servicios</a>
+                            href="../.././#servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="../../contacto/">Contacto</a>
@@ -153,7 +153,7 @@
                     y backline para shows en vivo.
                     Contamos con equipos de última generación y personal técnico especializado para crear experiencias
                     memorables en León, Querétaro y todo el Bajío.</p>
-                <a href="/servicios/eventos/index.html" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
+                <a href="/servicios/producciones/eventos/" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
                     data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">Ver Más</a>
             </div>
         </div>
@@ -179,7 +179,7 @@
                     graduaciones y bodas—en una experiencia vibrante, con música seleccionada para cada estilo y
                     momento.
                 </p>
-                <a href="/servicios/artistas/index.html" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
+                <a href="/servicios/producciones/artistas/" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
                     data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">Ver Más</a>
             </div>
             <div class="col-lg-6 px-0 order-1 order-lg-2 d-flex justify-content-end">
