--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <a class="nav-link text-white fw-medium text-center m-3" href="contacto/">Contacto</a>
                     </li>
                 </ul>
-                <div class="d-flex align-items-center ms-md-3">
+                <div class="d-flex align-items-center justify-content-center ms-md-3">
                     <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
                         href="https://www.tiktok.com/@triviumrecords" target="_blank" rel="noopener">
                         <i class="fab fa-tiktok"></i>
