--- a/servicios/producciones/eventos/index.html
+++ b/servicios/producciones/eventos/index.html
@@ -168,7 +168,7 @@
     <!-- Facts End -->
 
 
-    <!-- Party pack Start -->
+    <!-- Zona prueba Start -->
     <div class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
             <h2 class="text-white mb-3 display-4">Party</h2>
@@ -272,6 +272,114 @@
             </div>
         </div>
     </div>
+
+    <!-- Zona prueba End -->
+
+
+    <!-- Party pack Start -->
+    <!-- <div class="container pt-5">
+        <div class="d-flex flex-column text-center mb-5">
+            <h2 class="text-white mb-3 display-4">Party</h2>
+            <p class="text-white" style="font-size: .9rem;">"Ninguno de los paquetes incluye viáticos ni hospedaje. En
+                caso de ser necesario, estos serán cubiertos por el cliente. Se aplicarán cargos adicionales por cada
+                hora excedida."</p>
+        </div>
+        <div class="row pb-3 justify-content-center">
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">
+                <div class="custom-card-service">
+                    <div class="custom-card-img-wrapper">
+                        <img class="custom-card-img" src="../../../img/pack_party_1.webp" alt="">
+                    </div>
+                    <div class="custom-card-content">
+                        <div class="d-flex justify-content-center align-items-center mb-2">
+                            <h4 class="card-title text-white text-truncate m-3">Party Packs 1</h4>
+                        </div>
+                        <ul>
+                            <li>2 HK Polar 12 (Capacidad para 150 personas)</li>
+                            <li>2 Microfonos inalambricos</li>
+                            <li>1 Cabina iluminada</li>
+                            <li>4 Par Leds</li>
+                            <li>Dj</li>
+                            <li>Equipo Técnico</li>
+                        </ul>
+                        <div class="d-flex justify-content-center">
+                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Party%20Pack%201"
+                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                                rel="noopener">
+                                <i class="fab fa-whatsapp fa-lg m-2"></i>
+                                WhatsApp
+                            </a>
+                        </div>
+                        <p class="text-center text-white m-3">Desde $18,000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" data-aos-once="true">
+                <div class="custom-card-service">
+                    <div class="custom-card-img-wrapper">
+                        <img class="custom-card-img" src="../../../img/pack_party_2.webp" alt="">
+                    </div>
+                    <div class="custom-card-content">
+                        <div class="d-flex justify-content-center align-items-center mb-2">
+                            <h4 class="card-title text-white text-truncate m-3">Party Packs 2</h4>
+                        </div>
+                        <ul>
+                            <li>2 Medios Yamaha DSR115</li>
+                            <li>2 Bajos Yorkvile LS801P (Capacidad para 300 personas)</li>
+                            <li>2 Microfonos inalambricos</li>
+                            <li>1 Pantalla de 55"</li>
+                            <li>4 Cabezas Wash en 2 torres/columnas</li>
+                            <li>Cabina iluminada</li>
+                            <li>Dj</li>
+                            <li>Equipo Técnico</li>
+                        </ul>
+
+                        <div class="d-flex justify-content-center">
+                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Party%20Pack%202"
+                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                                rel="noopener">
+                                <i class="fab fa-whatsapp fa-lg m-2"></i>
+                                WhatsApp
+                            </a>
+                        </div>
+                        <p class="text-center text-white m-3">Desde $25,000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" data-aos-once="true">
+                <div class="custom-card-service">
+                    <div class="custom-card-img-wrapper">
+                        <img class="custom-card-img" src="../../../img/pack_party_3.webp" alt="">
+                    </div>
+                    <div class="custom-card-content">
+                        <div class="d-flex justify-content-center align-items-center mb-2">
+                            <h4 class="card-title text-white text-truncate m-3">Party Packs 3</h4>
+                        </div>
+                        <ul>
+                            <li>2 Medios Yamaha DSR115</li>
+                            <li>2 Bajos Yorkvile LS801P (Capacidad para 300 personas)</li>
+                            <li>2 Microfonos inalambricos</li>
+                            <li>4 Cabezas Beam en 4 torres/columna</li>
+                            <li>1 Maquina de humo</li>
+                            <li>Cabina iluminada</li>
+                            <li>Pista Led de 5x4 mts</li>
+                            <li>DJ</li>
+                            <li>Equipo técnico</li>
+                        </ul>
+                        <div class="d-flex justify-content-center">
+                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Party%20Pack%203"
+                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                                rel="noopener">
+                                <i class="fab fa-whatsapp fa-lg m-2"></i>
+                                WhatsApp
+                            </a>
+                        </div>
+                        <p class="text-center text-white m-3">Desde $45,000</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
     <!-- Party Pack End -->
 
 
